@@ -58,6 +58,7 @@ public class ReviewService {
                 .reviewText(reviewCreateDto.getText())
                 .difficulty(reviewCreateDto.getDifficulty())
                 .visitDate(reviewCreateDto.getVisitDate())
+                .receipt(reviewCreateDto.getReceipt())
                 .build();
 
         // 태그 저장 (최대 3개)
@@ -67,13 +68,13 @@ public class ReviewService {
                         .review(review)
                         .tag(ReviewTags.fromCode(code))
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         review.setReviewTags(reviewTagList);
 
         Review savedReview = reviewRepository.save(review);
 
-        // ✅ 대표 난이도 / 태그 갱신 (동점 있으면 첫 번째 값만 사용)
+        // 대표 난이도 / 태그 갱신 (동점 있으면 첫 번째 값만 사용)
         Difficulty mainDiff = reviewRepository.findDifficultiesByPopularity(touristSpot.getContentId())
                 .stream().findFirst().orElse(Difficulty.NONE);
 
@@ -90,6 +91,92 @@ public class ReviewService {
                 savedReview.getId(),
                 savedReview.getReviewText()
         );
+    }
+
+    // 리뷰 수정
+    @Transactional
+    public ReviewResponseDto.ReviewDto updateReview(Long reviewId, ReviewRequestDto.ReviewUpdateDto reviewUpdateDto) {
+        // 로그인한 사용자 찾기
+        Long userId = SecurityUtils.getCurrentUserId();
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
+
+        // 리뷰 찾기
+        Review review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new GeneralException(ErrorStatus.REVIEW_NOT_FOUND));
+
+        // 작성자 확인
+        if (!review.getUser().getId().equals(userId)) {
+            throw new GeneralException(ErrorStatus.REVIEW_ACCESS_DENIED);
+        }
+
+        // 리뷰 정보 업데이트 (부분 수정 지원)
+        review.updateReview(
+                reviewUpdateDto.getText(),
+                reviewUpdateDto.getDifficulty(),
+                reviewUpdateDto.getVisitDate()
+        );
+
+        // 태그가 제공된 경우에만 업데이트
+        if (reviewUpdateDto.getTagCodes() != null) {
+            List<ReviewTag> newReviewTags = reviewUpdateDto.getTagCodes().stream()
+                    .limit(3)
+                    .map(code -> ReviewTag.builder()
+                            .review(review)
+                            .tag(ReviewTags.fromCode(code))
+                            .build())
+                    .collect(Collectors.toList());
+            review.updateReviewTags(newReviewTags);
+        }
+
+        Review updatedReview = reviewRepository.save(review);
+
+        // 관광지 대표 난이도 / 태그 갱신
+        TouristSpot touristSpot = review.getTouristSpot();
+        Difficulty mainDiff = reviewRepository.findDifficultiesByPopularity(touristSpot.getContentId())
+                .stream().findFirst().orElse(Difficulty.NONE);
+        ReviewTags mainTag = reviewTagRepository.findTagsByPopularity(touristSpot.getContentId())
+                .stream().findFirst().orElse(null);
+
+        touristSpot.updateMainStats(mainDiff, mainTag);
+        touristSpotRepository.save(touristSpot);
+
+        return new ReviewResponseDto.ReviewDto(
+                updatedReview.getId(),
+                updatedReview.getReviewText()
+        );
+    }
+
+    // 리뷰 삭제
+    @Transactional
+    public void deleteReview(Long reviewId) {
+        // 로그인한 사용자 찾기
+        Long userId = SecurityUtils.getCurrentUserId();
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new GeneralException(ErrorStatus.MEMBER_NOT_FOUND));
+
+        // 리뷰 찾기
+        Review review = reviewRepository.findById(reviewId)
+                .orElseThrow(() -> new GeneralException(ErrorStatus.REVIEW_NOT_FOUND));
+
+        // 작성자 확인
+        if (!review.getUser().getId().equals(userId)) {
+            throw new GeneralException(ErrorStatus.REVIEW_ACCESS_DENIED);
+        }
+
+        TouristSpot touristSpot = review.getTouristSpot();
+
+        // 리뷰 삭제
+        reviewRepository.delete(review);
+
+        // 관광지 대표 난이도 / 태그 갱신
+        Difficulty mainDiff = reviewRepository.findDifficultiesByPopularity(touristSpot.getContentId())
+                .stream().findFirst().orElse(Difficulty.NONE);
+        ReviewTags mainTag = reviewTagRepository.findTagsByPopularity(touristSpot.getContentId())
+                .stream().findFirst().orElse(null);
+
+        touristSpot.updateMainStats(mainDiff, mainTag);
+        touristSpotRepository.save(touristSpot);
     }
 
 
